client/src/components/SidePanel/SidePanel.module.css
.SidePanel {
  position: absolute;
  right: 0px;
  background-color: white;
  box-sizing: border-box;
  display: flex;
  /* flex-direction: row; */
  /* top: 50px; */
  width: min-content;
  padding-top: 36px;
  padding-bottom: 36px;
  height: 80vh;  
  border-style: solid solid solid solid;
  border-color: var(--primary-color);

}

.card-list {
  padding-left: 36px;
  list-style: none;
  padding-right: 36px;
  margin-bottom: 0px;
  margin-top: 0px;
  display: flex;
  flex-direction: column;
  align-items: center;

}

.side-panel-title {
  position: absolute;
  display: flex;
  justify-content: center;
  font-family: "Monteserrat", sans-serif;
  margin-bottom: 0px;
  color: white;
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 3px;
  padding-top: 20px;
  padding-bottom: 10px;
  /* width: 364px; */
  border-radius: 5px;
  background-color: var(--primary-color);
  height: max-content;
  /* height: 100%; */
  /* transform: rotate(90deg); */
  writing-mode: vertical-lr;
  text-orientation: upright;
  top: 12.5vh;
  right: 364px;
  border-style: solid solid solid solid;
  border-color: var(--secondary-color);
  margin-right: 15px;
  padding-left: 10px;
  padding-right: 10px;
}

.maximized > .side-panel-title-not-fixed{
  margin-right: 0px;
}



.card-list-not-fixed{
  overflow-y: hidden;
  
}

.card-list-fixed{
  overflow-y: scroll;
}

.minimized{
    /* transform: translate(379px, 0px); */
    transform: translate(381px, 0px);
}



.fas{
    /* padding-left: 15px; */
    font-size: 1.5rem;
    padding-top: 15px;
    padding-bottom: 15px;
}

.side-panel-title:hover{
    color: #b1b1b1;
}

@media screen and (max-width: 550px) {


  .side-panel-title-text{
    display: none;
  }

  .side-panel-title{
    display: flex;
    align-items: flex-start;
    width: 45px;
    height: 45px;
    transform: translate(0px, 200px);
    /* top: 12.5vh; */
    padding: 10px;
    padding-right: 5px;
    padding-left: 5px;
  }


  
  .fa-chevron-right{
    color: var(--secondary-color);
    padding-left: 10px;
  }

  .fa-chevron-left{
    color: white;
    padding-left: 10px;
  }

}

/* .maximized{
    transform: translate(-363, 0px);
} */

